--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nationalparks # ArgoCDのアプリケーション名
-  namespace: cd-demo # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
 spec:
   replicas: 1
   selector:
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nationalparks-service # ArgoCDのアプリケーション名 + “-service”
-  namespace: cd-demo # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
 spec:
   selector:
     app: nationalparks # ArgoCDのアプリケーション名
@@ -51,7 +51,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: nationalparks-route # ArgoCDのアプリケーション名 + “-route”
-  namespace: cd-demo # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
 spec:
   to:
     kind: Service
