--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
 spec:
   type: ClusterIP
+  ipFamilies:
+    - IPv4
   ports:
     - name: http
       port: 8080
@@ -18,5 +20,8 @@ spec:
       port: 8778
       targetPort: 8778
       protocol: TCP
+  internalTrafficPolicy: Cluster
+  ipFamilyPolicy: SingleStack
+  sessionAffinity: None
   selector:
     app: nationalparks # ArgoCDのアプリケーション名
