--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -20,3 +20,4 @@ spec:
       protocol: TCP
   selector:
     app: nationalparks # ArgoCDのアプリケーション名
+    deployment: nationalparks # ArgoCDのアプリケーション名
