--- a/deployment2/route.yaml
+++ b/deployment2/route.yaml
@@ -2,7 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: nationalparks-route # ArgoCDのアプリケーション名 + “-route”
-  namespace: scsk-cicd-de2 # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev2 # OpenShiftのプロジェクト名
 spec:
   to:
     kind: Service
