--- a/deployment2/route.yaml
+++ b/deployment2/route.yaml
@@ -1,11 +1,11 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: nationalparks-route # ArgoCDのアプリケーション名 + “-route”
+  name: nationalparks-dev2-route # ArgoCDのアプリケーション名 + “-route”
   namespace: scsk-cicd-dev2 # OpenShiftのプロジェクト名
 spec:
   to:
     kind: Service
-    name: nationalparks-service # ArgoCDのアプリケーション名 + “-service”
+    name: nationalparks-dev2-service # ArgoCDのアプリケーション名 + “-service”
   port:
     targetPort: 8080
