--- a/deployment2/service.yaml
+++ b/deployment2/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nationalparks # ArgoCDのアプリケーション名
+  name: nationalparks-dev2 # ArgoCDのアプリケーション名
   namespace: scsk-cicd-dev2 # OpenShiftのプロジェクト名
 spec:
   type: ClusterIP
@@ -19,5 +19,5 @@ spec:
       targetPort: 8778
       protocol: TCP
   selector:
-    app: nationalparks # ArgoCDのアプリケーション名
-    deployment: nationalparks # ArgoCDのアプリケーション名
+    app: nationalparks-dev2 # ArgoCDのアプリケーション名
+    deployment: nationalparks-dev2 # ArgoCDのアプリケーション名
