--- a/deployment3/deployment.yaml
+++ b/deployment3/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nationalparks # ArgoCDのアプリケーション名
+  name: nationalparks-dev3 # ArgoCDのアプリケーション名
   namespace: scsk-cicd-dev3 # OpenShiftのプロジェクト名
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nationalparks # ArgoCDのアプリケーション名
+      app: nationalparks-dev3 # ArgoCDのアプリケーション名
   template:
     metadata:
       labels:
-        app: nationalparks # ArgoCDのアプリケーション名
+        app: nationalparks-dev3 # ArgoCDのアプリケーション名
     spec:
       containers:
-        - name: nationalparks # ArgoCDのアプリケーション名
+        - name: nationalparks-dev3 # ArgoCDのアプリケーション名
           image: image-registry.openshift-image-registry.svc:5000/scsk-cicd-dev3/nationalparks:latest # OpenShiftのイメージのパス
           ports:
             - containerPort: 8080
