--- a/deployment2/deployment.yaml
+++ b/deployment2/deployment.yaml
@@ -1,24 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nationalparks-dev2 # ArgoCDのアプリケーション名
+  name: nationalparks
   namespace: scsk-cicd-dev2 # OpenShiftのプロジェクト名
   labels:
-    app: nationalparks-dev2
-    app.kubernetes.io/name: nationalparks-dev2
+    app: nationalparks
+    app.kubernetes.io/component: nationalparks
+    app.kubernetes.io/instance: nationalparks
+    app.kubernetes.io/name: nationalparks
     app.kubernetes.io/part-of: nationalparks-git-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nationalparks-dev2 # ArgoCDのアプリケーション名
+      app: nationalparks
   template:
     metadata:
       labels:
-        app: nationalparks-dev2 # ArgoCDのアプリケーション名
+        app: nationalparks
     spec:
       containers:
-        - name: nationalparks-dev2 # ArgoCDのアプリケーション名
+        - name: nationalparks
           image: image-registry.openshift-image-registry.svc:5000/scsk-cicd-dev2/nationalparks:latest # OpenShiftのイメージのパス
           ports:
             - containerPort: 8080
