--- a/deployment/route.yaml
+++ b/deployment/route.yaml
@@ -1,11 +1,17 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: nationalparks-route # ArgoCDのアプリケーション名 + “-route”
+  name: nationalparks
   namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
+  labels:
+    app: nationalparks
+    app.kubernetes.io/component: nationalparks
+    app.kubernetes.io/instance: nationalparks
+    app.kubernetes.io/name: nationalparks
+    app.kubernetes.io/part-of: nationalparks-git-app
 spec:
   to:
     kind: Service
-    name: nationalparks-service # ArgoCDのアプリケーション名 + “-service”
+    name: nationalparks
   port:
     targetPort: 8080
