--- a/deployment3/service.yaml
+++ b/deployment3/service.yaml
@@ -1,8 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nationalparks-dev3 # ArgoCDのアプリケーション名
+  name: nationalparks
   namespace: scsk-cicd-dev3 # OpenShiftのプロジェクト名
+  labels:
+    app: nationalparks
+    app.kubernetes.io/component: nationalparks
+    app.kubernetes.io/instance: nationalparks
+    app.kubernetes.io/name: nationalparks
+    app.kubernetes.io/part-of: nationalparks-git-app
 spec:
   type: ClusterIP
   ports:
@@ -19,5 +25,5 @@ spec:
       targetPort: 8778
       protocol: TCP
   selector:
-    app: nationalparks-dev3 # ArgoCDのアプリケーション名
-    deployment: nationalparks-dev3 # ArgoCDのアプリケーション名
+    app: nationalparks
+    deployment: nationalparks
