--- a/deployment/dev1/route.yaml
+++ b/deployment/dev1/route.yaml
@@ -2,7 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: nationalparks
-  namespace: scsk-cicd-dev # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev
   labels:
     app: nationalparks
     app.kubernetes.io/component: nationalparks
