--- a/deployment/dev3/service.yaml
+++ b/deployment/dev3/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nationalparks
-  namespace: scsk-cicd-dev3 # OpenShiftのプロジェクト名
+  namespace: scsk-cicd-dev3
   labels:
     app: nationalparks
     app.kubernetes.io/component: nationalparks
