--- a/deployment/dev1/deployment.yaml
+++ b/deployment/dev1/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nationalparks
-  namespace: scsk-cicd-dev
+  namespace: scsk-cd-dev
   labels:
     app: nationalparks
     app.kubernetes.io/component: nationalparks
