--- a/deployment/dev2/service.yaml
+++ b/deployment/dev2/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nationalparks
-  namespace: scsk-cicd-dev2
+  namespace: scsk-cd-dev2
   labels:
     app: nationalparks
     app.kubernetes.io/component: nationalparks
